@@ -156,122 +156,6 @@ void Hashbits::load(std::string infilename)
     }
 }
 
-/**
- * Checks for non-ACGT characters before consuming read.
- * This is specifically for counting overlap k-mers.
- */
-unsigned int Hashbits::check_and_process_read_overlap(std::string &read,
-        bool &is_valid,
-        Hashbits &ht2)
-{
-    is_valid = check_and_normalize_read(read);
-
-    if (!is_valid) {
-        return 0;
-    }
-
-    return consume_string_overlap(read, ht2);
-}
-
-/**
- * Consume a FASTA file of reads.
- */
-void Hashbits::consume_fasta_overlap(const std::string &filename,
-                                     HashIntoType curve[2][100],Hashbits &ht2,
-                                     unsigned int &total_reads,
-                                     unsigned long long &n_consumed)
-{
-    total_reads = 0;
-    n_consumed = 0;
-    Read read;
-
-//get total number of reads in dataset
-
-    IParser* parser = IParser::get_parser(filename.c_str());
-    while(!parser->is_complete())  {
-        try {
-            read = parser->get_next_read();
-        } catch (NoMoreReadsAvailable &exc) {
-            break;
-        }
-        total_reads++;
-    }
-//block size for curve
-    int block_size = total_reads/100;
-
-// reads number <100, block size =1
-    if (block_size == 0) {
-        block_size = 1;
-    }
-// set the remaining as 0
-    for (int n=total_reads; n<100; n++) {
-        curve[0][n] = 0;
-        curve[1][n] = 0;
-    }
-
-    total_reads = 0;
-
-    delete parser;
-    parser = IParser::get_parser(filename.c_str());
-
-
-
-    string currSeq = "";
-
-    //
-    // iterate through the FASTA file & consume the reads.
-    //
-
-    while(!parser->is_complete())  {
-        try {
-            read = parser->get_next_read();
-        } catch (NoMoreReadsAvailable &exc) {
-            break;
-        }
-        currSeq = read.sequence;
-
-        unsigned int this_n_consumed;
-        bool is_valid;
-
-        this_n_consumed = check_and_process_read_overlap(currSeq,
-                          is_valid, ht2);
-
-        n_consumed += this_n_consumed;
-
-        // reset the sequence info, increment read number
-
-        total_reads++;
-
-        if (total_reads%block_size == 0) {
-            curve[0][total_reads/block_size-1] = n_overlap_kmers();
-            curve[1][total_reads/block_size-1] = n_unique_kmers();
-        }
-    } // while
-
-    delete parser;
-}
-
-/**
- * Run through every k-mer in the given string, & hash it.
- */
-unsigned int Hashbits::consume_string_overlap(const std::string &s,
-        Hashbits &ht2)
-{
-    const char * sp = s.c_str();
-    unsigned int n_consumed = 0;
-
-    KMerIterator kmers(sp, _ksize);
-
-    while(!kmers.done()) {
-        HashIntoType kmer = kmers.next();
-
-        count_overlap(kmer,ht2);
-        n_consumed++;
-    }
-
-    return n_consumed;
-}
-
 void Hashbits::update_from(const Hashbits &other)
 {
     if (_ksize != other._ksize) {
